# trader-finance-hub

./: .coverage  .gitignore  CHANGELOG.md  README.md
.workbuddy/memory/: 2026-06-24.md
cn-financial-mcp/: .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cn-financial-mcp/src/cn_financial_mcp/: __init__.py  __main__.py  server.py
cn-financial-mcp/src/cn_financial_mcp/tools/: __init__.py  company_info.py  eltdx_data.py  financial_stmt.py  industry.py  macro_fx.py  market.py  news_events.py  price_data.py  signal_data.py  valuation.py
cn-financial-mcp/src/cn_financial_mcp/utils/: __init__.py  cache.py  fallback.py  formatter.py  symbol.py
cn-financial-mcp/tests/: conftest.py  test_company_info.py  test_price_data.py  test_server.py  test_utils.py
config/: mcp-servers.json
docs/: architecture.md  documentation-fix-report.md
scripts/: health_check.py
src/: __init__.py  eltdx_provider.py  market_analyzer.py
src/astock_signals/: __init__.py  anti_ban_client.py  concept.py  convertible_bond.py  dragon_tiger.py  etf.py  fund_flow.py  hot_money.py  indicators.py  industry.py  lockup.py  northbound.py  smart_router.py  tick_store.py  ws_server.py
tests/: conftest.py  test_astock_init.py  test_convertible_bond.py  test_data_router_syntax.py  test_etf.py  test_legacy_modules.py  test_signal_data_mcp.py  test_smart_router.py  test_tick_store.py  test_ws_server.py
