[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "cn-financial-mcp"
version = "0.1.0"
description = "China Financial Data MCP Server based on AKShare - Free alternative to commercial financial data MCPs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "cn-financial-mcp Contributors" },
]
keywords = ["mcp", "akshare", "a-share", "stock", "finance", "china", "financial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "mcp>=1.0.0",
    "akshare>=1.14.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
    "sse-starlette>=1.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cn_financial_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
